# seam-agent

./: .gitignore  .pre-commit-config.yaml  README.md  conversation-analysis.md  customer-conversations-3-weeks.txt  customer-support-agent-prd.md  demo_investigation.py  hello.py  investigation_20250730_110008.md  investigation_20250730_123501.md  investigation_20250731_133738.md  investigation_20250731_133808.md  investigation_20250731_143310.md  investigation_20250731_143806.md  investigation_20250731_143924.md  investigation_20250731_144510.md  investigation_20250731_144719.md  investigation_20250731_145258.md  investigation_20250731_181956.md  investigation_20250731_183910.md  investigation_20250731_184324.md  investigation_20250731_185940.md  investigation_20250731_190401.md  investigation_20250801_170824.md  investigation_20250801_171153.md  investigation_20250801_171814.md  investigation_20251125_171243.md  openapi.json  pyproject.toml  quickwit_logs_sample.json  task.md
.cursor/rules/: clean-code.mdc  codequality.mdc  core.mdc  python.mdc  task-list.mdc
.windsurf/rules/: clean-code.md  codequality.md  core.md  python.md  task-list.md
docs/: conversation-analysis.md  customer-conversations-3-weeks.txt  customer-support-agent-prd.md
src/seam_agent/assistant/: client.py  dynamic_tool_selector.py  investigation_config.py  investigation_logger.py  investigation_strategy.py  model_client.py  models.py  orchestrator.py  prompt_manager.py  query_parser.py  server.py  simple_investigator.py  tool_orchestrator.py  tool_registry.py  tool_result_processor.py
src/seam_agent/connectors/: admin_links.py  admin_pages_context.md  db.py  quickwit.py  seam_api.py
tests/: test_dynamic_tool_selector.py  test_investigation_config.py  test_investigator_integration.py  test_investigator_live.py  test_orchestrator.py  test_simple.py
