[project]
name = "seam-agent"
version = "0.1.0"
description = "AI Customer Support Assistant for Seam"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = ["fastmcp", "pydantic"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit", "pyright"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
