[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seam-agent"
version = "0.1.0"
description = "AI Customer Support Assistant for Seam"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.10.6",
    "pydantic",
    "httpx",
    "asyncpg>=0.30.0",
    "openai>=1.0.0",
    "mcp>=1.0.0",
    "anthropic>=0.60.0",
    "pre-commit",
    "pytest",
    "ruff",
    "pyright",
]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
]
